--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,14 +6,16 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <application android:usesCleartextTraffic="true" >
+    <application
+        android:name="io.flutter.app.FlutterApplication"
+        android:label="CoviUpdate"
+        android:icon="@mipmap/ic_launcher">
+
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyABroDPbDIc690gZiOibfbGc1NpQXdb81Y"/>
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="393430271780731"/>
         <meta-data android:name="io.flutter.network-policy" android:resource="@xml/network_security_config"/>
 
-        android:name="io.flutter.app.FlutterApplication"
-        android:label="recollection_app"
-        android:icon="@mipmap/ic_launcher">
+
 
         <activity
             android:name=".MainActivity"
